complete searchbar , searchResult and jobsPage pages and add pagination

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,13 @@
 @import './base.css';
+/* global.css */
+
+@import url('bootstrap.min.css');
+@import url('fontawesome-all.min.css');
+ 
+/* @import url('responsive.css'); */
+@import url('nice-select.css');
+@import url('style.css'); */
+
 
 #app {
   max-width: 1280px;
@@ -23,13 +32,13 @@ a,
 
 @media (min-width: 1024px) {
   body {
-    display: flex;
+    /* display: flex; */
     place-items: center;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* display: grid; */
+    /* grid-template-columns: 1fr 1fr; */
     padding: 0 2rem;
   }
 }
